Invitación de boda con intro MP4

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Invitación · Urbano y María</title>
+
+  <!-- Parisienne -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <!-- INTRO FULLSCREEN: SOLO MP4 -->
+  <!-- INTRO: MP4 fullscreen -->
   <div id="intro" class="intro" aria-label="Invitación">
     <video
       id="introVideo"
@@ -19,32 +25,23 @@
     </video>
   </div>
 
-  <!-- APP (oculta hasta que termine el vídeo) -->
+  <!-- APP -->
   <div id="app" class="app" aria-hidden="true">
 
-    <!-- HEADER tipo Google Sites -->
+    <!-- TOPBAR -->
     <header class="topbar">
       <button id="menuBtn" class="iconBtn" aria-label="Abrir menú">
-        <!-- icono hamburguesa -->
         <svg viewBox="0 0 24 24" aria-hidden="true">
           <path d="M4 6h16M4 12h16M4 18h16" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
         </svg>
       </button>
 
-      <!-- Logo U&M (ahora texto). Si luego lo quieres como imagen:
-           sustituye por: <img class="logoImg" src="assets/UyM.png" alt="U&M" />
-      -->
       <div class="logoText">U&amp;M</div>
 
-      <button class="iconBtn" aria-label="Buscar" style="opacity:.0; pointer-events:none;">
-        <!-- dejamos hueco para que quede equilibrado (como en Sites) -->
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M10.5 3a7.5 7.5 0 105.3 12.8l3.2 3.2" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-      </button>
+      <div class="rightSpacer" aria-hidden="true"></div>
     </header>
 
-    <!-- MENÚ (overlay) -->
+    <!-- MENÚ -->
     <div id="menuOverlay" class="menuOverlay" aria-hidden="true">
       <div class="menuPanel" role="dialog" aria-label="Menú">
         <button id="closeBtn" class="closeBtn" aria-label="Cerrar menú">
@@ -54,61 +51,76 @@
         </button>
 
         <nav class="menuNav">
-          <a href="#inicio" class="menuItem">Inicio</a>
-          <a href="#asistencia" class="menuItem">Asistencia</a>
-          <a href="#ceremonia" class="menuItem">Ceremonia</a>
-          <a href="#banquete" class="menuItem">Banquete</a>
-          <a href="#autobus" class="menuItem">Autobús</a>
-          <a href="#itinerario" class="menuItem">Itinerario</a>
-          <a href="#agradecimiento" class="menuItem">Agradecimiento</a>
+          <button class="menuItem" data-page="inicio">Inicio</button>
+          <button class="menuItem" data-page="asistencia">Asistencia</button>
+          <button class="menuItem" data-page="ceremonia">Ceremonia</button>
+          <button class="menuItem" data-page="banquete">Banquete</button>
+          <button class="menuItem" data-page="autobus">Autobús</button>
+          <button class="menuItem" data-page="itinerario">Itinerario</button>
+          <button class="menuItem" data-page="agradecimiento">Agradecimiento</button>
         </nav>
       </div>
     </div>
 
-    <!-- CONTENIDO -->
-    <main class="content">
-      <!-- INICIO -->
-      <section id="inicio" class="section">
-        <!-- Tu invitación completa -->
+    <!-- PÁGINAS -->
+    <main class="pages">
+
+      <!-- INICIO: SOLO LA IMAGEN -->
+      <section class="page is-active" data-page="inicio">
         <img class="inviteImg" src="assets/Invitacion.png" alt="Invitación" />
+        <img class="sanlorenzoImg" src="assets/SanLorenzo.png" alt="San Lorenzo, Sevilla" />
       </section>
 
-      <!-- Secciones (placeholder por ahora, luego metemos contenido real) -->
-      <section id="asistencia" class="section textSection">
-        <h2>Asistencia</h2>
-        <p>Aquí irá el enlace o formulario de confirmación.</p>
+      <!-- RESTO DE PÁGINAS (placeholders) -->
+      <section class="page" data-page="asistencia">
+        <div class="pageInner">
+          <h1 class="pageTitle">Asistencia</h1>
+          <p class="pageText">Aquí irá tu confirmación (formulario/enlace/WhatsApp).</p>
+        </div>
       </section>
 
-      <section id="ceremonia" class="section textSection">
-        <h2>Ceremonia</h2>
-        <p>Detalles de la parroquia, hora, mapa, etc.</p>
+      <section class="page" data-page="ceremonia">
+        <div class="pageInner">
+          <h1 class="pageTitle">Ceremonia</h1>
+          <p class="pageText">Detalles, ubicación, hora, mapa…</p>
+        </div>
       </section>
 
-      <section id="banquete" class="section textSection">
-        <h2>Banquete</h2>
-        <p>Detalles de Hacienda los Parrales, hora, mapa, etc.</p>
+      <section class="page" data-page="banquete">
+        <div class="pageInner">
+          <h1 class="pageTitle">Banquete</h1>
+          <p class="pageText">Hacienda los Parrales, horarios, mapa…</p>
+        </div>
       </section>
 
-      <section id="autobus" class="section textSection">
-        <h2>Autobús</h2>
-        <p>Info de buses, horarios y puntos de salida.</p>
+      <section class="page" data-page="autobus">
+        <div class="pageInner">
+          <h1 class="pageTitle">Autobús</h1>
+          <p class="pageText">Puntos de salida, horarios, confirmación…</p>
+        </div>
       </section>
 
-      <section id="itinerario" class="section textSection">
-        <h2>Itinerario</h2>
-        <p>Timeline del día (ceremonia, cóctel, cena, fiesta...).</p>
+      <section class="page" data-page="itinerario">
+        <div class="pageInner">
+          <h1 class="pageTitle">Itinerario</h1>
+          <p class="pageText">Timeline del día.</p>
+        </div>
       </section>
 
-      <section id="agradecimiento" class="section textSection">
-        <h2>Agradecimiento</h2>
-        <p>Texto final bonito, contacto, etc.</p>
+      <section class="page" data-page="agradecimiento">
+        <div class="pageInner">
+          <h1 class="pageTitle">Agradecimiento</h1>
+          <p class="pageText">Texto final bonito.</p>
+        </div>
       </section>
+
     </main>
-
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
