--- a/index.html
+++ b/index.html
@@ -1,111 +1,187 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Invitación · Urbano y María</title>
 
   <!-- Parisienne -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<!-- INTRO -->
-<div class="intro" id="intro">
-  <video class="introVideo" id="introVideo" src="assets/Sobre.mp4" playsinline></video>
-</div>
+  <!-- INTRO: SOBRE -->
+  <div id="intro" class="intro" aria-label="Sobre de invitación">
+    <video id="introVideo" class="introVideo" src="assets/Sobre.mp4" playsinline preload="auto"></video>
+  </div>
 
-<!-- APP -->
-<div class="app" id="app">
+  <!-- APP -->
+  <div id="app" class="app" aria-hidden="true">
 
-  <!-- TOPBAR -->
-  <header class="topbar">
-    <button class="iconBtn" id="openMenu">☰</button>
-    <div class="logoText">U&amp;M</div>
-  </header>
+    <!-- TOPBAR -->
+    <header class="topbar">
+      <button id="menuBtn" class="iconBtn" aria-label="Menú">☰</button>
+      <div class="logoText">U&amp;M</div>
 
-  <!-- HOME -->
-  <main class="home">
-    <div class="invitation">
+      <!-- Volver a ver el sobre -->
+      <button id="replayBtn" class="replayBtn" aria-label="Ver el sobre otra vez">↻</button>
+    </header>
 
-      <h1 class="names">Urbano y María</h1>
-      <p class="subtitle">Junto con nuestras familias</p>
+    <!-- MENÚ OVERLAY -->
+    <div id="menuOverlay" class="menuOverlay" aria-hidden="true">
+      <button id="closeBtn" class="closeBtn" aria-label="Cerrar">✕</button>
 
-      <p class="body">
-        Tenemos el placer de invitaros a nuestro enlace matrimonial que tendrá lugar
-        <span class="dm">(D.m)</span><br>
-        el próximo día <span class="em">12 de septiembre de 2026</span> a las
-        <span class="em">17:00</span> de la tarde<br>
-        en la <span class="em">Parroquia San Lorenzo Mártir (Sevilla)</span>.
-      </p>
-
-      <p class="body">
-        A continuación, lo celebraremos todos juntos en la
-        <span class="em">Hacienda los Parrales</span>.
-      </p>
-
-      <div class="imageWrap">
-        <img src="assets/SanLorenzo.png" alt="San Lorenzo">
-      </div>
-
-      <p class="confirm">Se ruega Confirmación</p>
-
-      <div class="footer">
-        <div class="left">Urbano<br>668 556 740</div>
-        <div class="center">Sevilla, 2026</div>
-        <div class="right">María<br>662 393 762</div>
-      </div>
-
+      <nav class="menuNav" aria-label="Navegación">
+        <button class="menuLink" type="button" data-page="inicio">Inicio</button>
+        <button class="menuLink" type="button" data-page="asistencia">Asistencia</button>
+        <button class="menuLink" type="button" data-page="ceremonia">Ceremonia</button>
+        <button class="menuLink" type="button" data-page="banquete">Banquete</button>
+        <button class="menuLink" type="button" data-page="autobus">Autobús</button>
+        <button class="menuLink" type="button" data-page="itinerario">Itinerario</button>
+        <button class="menuLink" type="button" data-page="agradecimiento">Agradecimiento</button>
+      </nav>
     </div>
-  </main>
 
-</div>
+    <main class="pages">
 
-<!-- MENU -->
-<div class="menu" id="menu">
-  <button class="close" id="closeMenu">✕</button>
-  <nav>
-    <button>Inicio</button>
-    <button>Asistencia</button>
-    <button>Ceremonia</button>
-    <button>Banquete</button>
-    <button>Autobús</button>
-    <button>Itinerario</button>
-    <button>Agradecimiento</button>
-    <button id="replay">Reproducir sobre</button>
-  </nav>
-</div>
+      <!-- INICIO: PORTADA = IMAGEN COMPLETA + TEXTO ABAJO -->
+      <section class="page is-active is-visible" data-page="inicio">
+        <div class="homeFit">
 
-<script>
-const intro = document.getElementById("intro");
-const video = document.getElementById("introVideo");
-const app = document.getElementById("app");
+          <div class="invImageWrap invBlock">
+            <img class="invImage" src="assets/Invitacion.png" alt="Invitación" />
+          </div>
+              
+          <div class="invImageWrap sanBlock">
+            <img class="sanImage" src="assets/SanLorenzo.png" alt="San Lorenzo" />
+          </div>
 
-intro.addEventListener("click", async () => {
-  try {
-    video.currentTime = 0;
-    await video.play();
-  } catch {}
-});
+          <div class="bottomText">
+            <p class="confirm">Se ruega Confirmación</p>
 
-video.addEventListener("ended", () => {
-  intro.style.display = "none";
-  app.classList.add("show");
-});
+            <div class="footer">
+              <div class="left">Urbano<br>668 556 740</div>
+              <div class="center">Sevilla, 2026</div>
+              <div class="right">María<br>662 393 762</div>
+            </div>
+          </div>
 
-document.getElementById("openMenu").onclick = () =>
-  document.getElementById("menu").classList.add("show");
+        </div>
+      </section>
 
-document.getElementById("closeMenu").onclick = () =>
-  document.getElementById("menu").classList.remove("show");
+      <!-- PÁGINAS (vacías de momento) -->
+      <section class="page" data-page="asistencia"><div class="blankPage">Asistencia</div></section>
+      <section class="page" data-page="ceremonia"><div class="blankPage">Ceremonia</div></section>
+      <section class="page" data-page="banquete"><div class="blankPage">Banquete</div></section>
+      <section class="page" data-page="autobus"><div class="blankPage">Autobús</div></section>
+      <section class="page" data-page="itinerario"><div class="blankPage">Itinerario</div></section>
+      <section class="page" data-page="agradecimiento"><div class="blankPage">Agradecimiento</div></section>
 
-document.getElementById("replay").onclick = () => location.reload();
-</script>
+    </main>
+  </div>
+
+  <script>
+    // ========= INTRO SOBRE =========
+    const intro = document.getElementById("intro");
+    const introVideo = document.getElementById("introVideo");
+    const app = document.getElementById("app");
+
+    let started = false;
+
+    function showApp(){
+      intro.style.display = "none";
+      intro.classList.remove("fadeOut");
+      app.classList.add("show");
+      app.setAttribute("aria-hidden", "false");
+      window.scrollTo(0,0);
+    }
+
+    function showIntro(){
+      // vuelve a enseñar el sobre y reinicia el vídeo
+      app.classList.remove("show");
+      app.setAttribute("aria-hidden", "true");
+      intro.style.display = "block";
+      intro.classList.remove("fadeOut");
+      started = false;
+      try{
+        introVideo.pause();
+        introVideo.currentTime = 0;
+      }catch(e){}
+    }
+
+    // Click en la intro -> reproduce una vez
+    intro.addEventListener("click", async () => {
+      if (started) return;
+      started = true;
+      try {
+        introVideo.currentTime = 0;
+        await introVideo.play();
+      } catch (e) {
+        showApp();
+      }
+    });
+
+    // Al terminar el vídeo -> muestra la portada
+    introVideo.addEventListener("ended", () => {
+      intro.classList.add("fadeOut");
+      setTimeout(showApp, 520);
+    });
+
+    // ========= MENÚ =========
+    const menuBtn = document.getElementById("menuBtn");
+    const closeBtn = document.getElementById("closeBtn");
+    const menuOverlay = document.getElementById("menuOverlay");
+
+    menuBtn.addEventListener("click", () => menuOverlay.classList.add("show"));
+    closeBtn.addEventListener("click", () => menuOverlay.classList.remove("show"));
+    menuOverlay.addEventListener("click", (e) => {
+      if (e.target === menuOverlay) menuOverlay.classList.remove("show");
+    });
+
+    // ========= PÁGINAS =========
+    const pages = Array.from(document.querySelectorAll(".page"));
+    let active = "inicio";
+
+    function getPage(name){ return pages.find(p => p.dataset.page === name); }
+
+    function setActive(target){
+      if (!target || target === active) return;
+      const current = getPage(active);
+      const next = getPage(target);
+      if (!current || !next) return;
+
+      current.classList.remove("is-visible");
+      setTimeout(() => {
+        current.classList.remove("is-active");
+        next.classList.add("is-active");
+        requestAnimationFrame(() => next.classList.add("is-visible"));
+        active = target;
+        window.scrollTo(0,0);
+      }, 220);
+    }
+
+    document.querySelectorAll(".menuLink").forEach(btn => {
+      btn.addEventListener("click", () => {
+        menuOverlay.classList.remove("show");
+        setActive(btn.dataset.page);
+      });
+    });
+
+    // ========= REPLAY (sin recargar) =========
+    const replayBtn = document.getElementById("replayBtn");
+    replayBtn.addEventListener("click", () => {
+      menuOverlay.classList.remove("show");
+      showIntro();
+    });
+  </script>
 
 </body>
 </html>
+
 
 
 
