Invitación de boda con intro MP4

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               <h2 class="placeTitle">Otros</h2>
             
               <div class="otrosRow">
-                <div class="otrosLeft">Taxi Fainlucar</div>
+                <div class="otrosLeft">Taxi Sanlucar</div>
                 <div class="otrosRight">
                   <a class="otrosLink" href="tel:654110110">654 110 110</a>
                 </div>
