--- a/index.html
+++ b/index.html
@@ -201,75 +201,15 @@
 
       <!-- ITINERARIO -->
 <!-- ITINERARIO -->
-<section class="page" data-page="itinerario">
-  <div class="itWrap">
-
-    <div class="timeline" aria-label="Itinerario de la boda">
-
-      <div class="tlItem">
-        <div class="tlIcon" aria-hidden="true">
-          <img src="assets/ItinerarioIglesia.png" alt="">
+      <section class="page" data-page="itinerario">
+        <div class="homeFit">
+          <div class="invImageWrap">
+            <img
+              class="invImage"
+              src="assets/Itinerario.png">
+          </div>
         </div>
-        <div class="tlContent">
-          <div class="tlTime">17:00 h</div>
-          <div class="tlText">Ceremonia</div>
-        </div>
-      </div>
-
-      <div class="tlItem">
-        <div class="tlIcon" aria-hidden="true">
-          <img src="assets/ItinerarioBus.png" alt="">
-        </div>
-        <div class="tlContent">
-          <div class="tlTime">19:00 h</div>
-          <div class="tlText">Recogida</div>
-        </div>
-      </div>
-
-      <div class="tlItem">
-        <div class="tlIcon" aria-hidden="true">
-          <img src="assets/ItinerarioRecepcion.png" alt="">
-        </div>
-        <div class="tlContent">
-          <div class="tlTime">20:00 h</div>
-          <div class="tlText">Recepción</div>
-        </div>
-      </div>
-
-      <div class="tlItem">
-        <div class="tlIcon" aria-hidden="true">
-          <img src="assets/ItinerarioCena.png" alt="">
-        </div>
-        <div class="tlContent">
-          <div class="tlTime">22:00 h</div>
-          <div class="tlText">Cena</div>
-        </div>
-      </div>
-
-      <div class="tlItem">
-        <div class="tlIcon" aria-hidden="true">
-          <img src="assets/ItinerarioMusica.png" alt="">
-        </div>
-        <div class="tlContent">
-          <div class="tlTime">23:30 h</div>
-          <div class="tlText">Baile</div>
-        </div>
-      </div>
-
-      <div class="tlItem">
-        <div class="tlIcon" aria-hidden="true">
-          <img src="assets/ItinerarioFinFiesta.png" alt="">
-        </div>
-        <div class="tlContent">
-          <div class="tlTime">04:30 h</div>
-          <div class="tlText">Fin de fiesta</div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
+      </section>
 
       <!-- AGRADECIMIENTO -->
       <section class="page" data-page="agradecimiento">
